# MaterialCleaner

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  index.md  module.gradle  privacypolicy.md  settings.gradle  termsconditions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto_close_issues.yml
aidl/: build.gradle
app/: aapt2-resources.cfg  build.gradle  dictionary-class.txt  dictionary-java_reserved_word.txt  dictionary-method.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Mount.cpp  Mount.h  ProcInfo.cpp  ProcInfo.h
app/src/main/cpp/genuine/: am-proxy.c  anti-xposed.c  anti-xposed.h  apk-sign-v2.c  art.h  bitmap.c  bitmap.h  classloader.cpp  classloader.h  common.c  common.h  dex-path-list.cpp  dex-path-list.h  epic-field.c  epic-field.h  epic-method.c  epic-method.h  epic.c  epic.h  find-name.cpp  find-name.h  genuine.c  genuine.h  genuine_extra.cpp  genuine_extra.h  handle-error.c  handle-error.h  hash.c  inline.c  inline.h  native-activity.c  openat.c  pm.c  xposed-nop.cpp  xposed-nop.h
app/src/main/cpp/include/: android_filesystem_config.h  linux_syscall_support.h  logging.h  misc.cpp  misc.h  socket.cpp  socket.h
app/src/main/cpp/include/android-base/: errno_restorer.h  file.cpp  file.h  logging.cpp  logging.h  logging_splitters.h  macros.h  parseint.h  posix_strerror_r.cpp  stringprintf.cpp  stringprintf.h  strings.cpp  strings.h  threads.cpp  threads.h  unique_fd.h  utf8.cpp  utf8.h
app/src/main/cpp/inline/: CMakeLists.txt  bpf_hook.cpp  bpf_hook.h  fuse_i.h  fuse_lowlevel.h  inline.cpp
app/src/main/cpp/starter/: CMakeLists.txt  android.cpp  android.h  cgroup.cpp  misc.cpp  selinux.cpp  starter.cpp
app/src/main/res/anim/: slide_down.xml  slide_down_background.xml  slide_up.xml  slide_up_background.xml
app/src/main/res/animator/: check_animator.xml  design_appbar.xml
app/src/main/res/drawable/: afs_md3_thumb.xml  baseline_maximize_24.xml  ic_baseline_error_24.xml  ic_baseline_info_24.xml  ic_baseline_settings_24.xml  ic_launcher_foreground.xml  ic_outline_add_24.xml  ic_outline_android_24.xml  ic_outline_apps_24.xml  ic_outline_autorenew_24.xml  ic_outline_block_24.xml  (+41 more)
gradle/wrapper/: gradle-wrapper.properties
hidden-api-bridge/: build.gradle
hidden-api-stub/: build.gradle
hidden-system-api/: build.gradle
releases/: module.json  module.md
server/: build.gradle
server/src/main/assets/: native_init  xposed_init
shared/: build.gradle
(+497 files in other folders)
